[gd_scene load_steps=5 format=3 uid="uid://dib7ifyy3j2il"]

[ext_resource type="Script" uid="uid://ctfcmhpjw0xy1" path="res://scenes/enemy_1.gd" id="1_a1412"]
[ext_resource type="Texture2D" uid="uid://ct4eukpu7lsyf" path="res://assets/ships_packed.png" id="1_tcmaw"]
[ext_resource type="AudioStream" uid="uid://o5061v2yop2p" path="res://sfx/enemy Weapon Laser 03.wav" id="3_ejytf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a1412"]
size = Vector2(46, 36)

[node name="Enemy1" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_a1412")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = -3.14159
scale = Vector2(2.5, 2.5)
texture = ExtResource("1_tcmaw")
region_enabled = true
region_rect = Rect2(68.3848, 38.0492, 23.2863, 20.4571)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_a1412")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(0, 27)

[node name="shootTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, -30)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ejytf")
volume_db = -3.0

[connection signal="timeout" from="shootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
